--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
     "eslint": "^7.14.0",
+    "mocha": "^8.2.1",
     "yarn": "^1.22.10"
   }
 }
